--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Transvaal (South Africa) -- History -- War of 1880-1881 -- Juvenile fiction'
 - !lcsh 'Zulu War, 1879 -- Juvenile fiction'
+- GITenberg
 title: 'The Young Colonists: A Story of the Zulu and Boer Wars'
 url: http://www.gutenberg.org/ebooks/32934
